--- a/Resp.plist
+++ b/Resp.plist
@@ -11,7 +11,7 @@
                 <key>kind</key>
                 <string>software-package</string>
                 <key>url</key>
-                <string>https://gitlab.com/GeekStore/GeekStore/-/raw/main/1.6.4-12.2-12.5.ipa?inline=false</string>
+                <string>https://github.com/iGeek-OS2/Shortcuts/raw/main/resp.ipa</string>
             </dict>
         </array>
         <key>metadata</key>
@@ -23,7 +23,7 @@
             <key>kind</key>
             <string>software</string>
             <key>title</key>
-            <string>Chimera</string>
+            <string>Respring</string>
         </dict>
     </dict>
 </array>
