--- a/Resp.plist
+++ b/Resp.plist
@@ -11,13 +11,13 @@
                 <key>kind</key>
                 <string>software-package</string>
                 <key>url</key>
-                <string>https://github.com/iGeek-OS2/Shortcuts/raw/main/resp.ipa</string>
+                <string>https://github.com/iGeek-OS2/Shortcuts/blob/main/Respring.ipa.zip?raw=true</string>
             </dict>
         </array>
         <key>metadata</key>
         <dict>
             <key>bundle-identifier</key>
-            <string>com.geekstore.Chimera</string>
+            <string>com.appled.d</string>
             <key>bundle-version</key>
             <string>1.0.0</string>
             <key>kind</key>
