--- a/Succession.plist
+++ b/Succession.plist
@@ -11,7 +11,7 @@
                 <key>kind</key>
                 <string>software-package</string>
                 <key>url</key>
-                <string>https://github.com/iGeek-OS2/GeekStore/blob/main/Succession_NOJB.ipa?raw=true</string>
+                <string>https://raw.githubusercontent.com/iGeek-OS2/iOS16-Store/main/Phœnix_6.0_1679806658.ipa</string>
             </dict>
         </array>
         <key>metadata</key>
